# Scheduler

./: Cargo.toml  README.md
src/: error.rs  ical.rs  main.rs  shifts.rs  timetable.rs  util.rs
