[package]
name = "scheduler"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.x"
chrono = { version = "0.4", features = ["serde"] }
array-init = "*"
unicode-width = "*"
dialoguer = "*"
serde = { version = "1.x", features = ["derive"] }
serde_json = "*"
enum-iterator = "0.5"
itertools = "0.8.x"
icalendar = { version = "0.9", optional = true }

[features]
default = ["ical"]
ical = ["icalendar"]

